--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,6 @@
 (rollup src/cash.js -o dist/cash-bundle.js -f cjs  -w)
 
-CHECK > Pattern-reading display bug (when reading, it cant display because of onload event happening at the same time as the display)
-CHECK > Working out speed issues. 
-> Work out better ways to control FPS / with better names than "throttle". Use prime as a testbed!
-
-> Make sure I explain that the initial-pattern shit doesn't work without a server.... maybe I can still look into fixing this but I don't think it's worth it
-
-> Asynchrone updating
 > Fvals / diffuse Fvals
 > ODE solver for Fvals
 > Pause / run functionality 
+> Display grid after pattern-load (now it skips :()
