--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,13 @@
 (rollup src/model.js -o dist/cacatoo.js -f cjs  -w)
 
-> Is grids[] een Object ipv Array maken (met properties "cheater", "prime") langzamer?
-
-> Remove model as overarching class
+> Display grid after pattern-load (now it skips :()
 > Spacetime plots
 > Over nadenken: alleen changed pixels tekenen? :)
 > Perfectmix via update_order??
->> populate grid via dict rather than 1,0.33,2,0.33 etc.
+> populate grid via dict rather than 1,0.33,2,0.33 etc.
 > Proper ODE state diffusion method (now it's either having edge effects due to sync, or has a random component due to async updating)
 > Add option to deep copy
-> Display grid after pattern-load (now it skips :()
+
 
 Known issues for manual / documentation:
 >> synchronous updating does NOT deep copy by default
