Updated TE model for revision

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 (rollup src/model.js -o dist/cacatoo.js -f cjs  -w)
 
+> Push data to graphs rather then completely reload it
+> SumMoore functionality
+> FBA testing
 > Spacetime plots
 > Options to save PNGs:
 		// change stuff below to sim.spirals.drawslide("name")
