--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 (rollup src/model.js -o dist/cacatoo.js -f cjs  -w)
 
 > Go through all examples making sure the comments are not from older code
+> Error for Initial Pattern handling via ALERT
 > Modify tutorials to match with new function names, etc. (e.g. predator prey with string-labels)
 > Replace replit with JSfiddle examples
 
