JOSS paper update.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -34,3 +34,42 @@
   year={2021},
   publisher={Cold Spring Harbor Laboratory}
 }
+
+@article{jaspers2019resolving,
+  title={Resolving structure and function of metaorganisms through a holistic framework combining reductionist and integrative approaches},
+  author={Jaspers, Cornelia and Fraune, Sebastian and Arnold, A Elizabeth and Miller, David J and Bosch, Thomas CG and Voolstra, Christian R and others},
+  journal={Zoology},
+  volume={133},
+  pages={81--87},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{rainey2020toward,
+  title={Toward a dynamical understanding of microbial communities},
+  author={Rainey, Paul B and Quistad, Steven D},
+  journal={Philosophical Transactions of the Royal Society B},
+  volume={375},
+  number={1798},
+  pages={20190248},
+  year={2020},
+  publisher={The Royal Society}
+}
+
+@article{fusco2016excess,
+  title={Excess of mutational jackpot events in growing populations due to gene surfing},
+  author={Fusco, Diana and Gralka, Matti and Anderson, Alex and Kayser, Jona and Hallatschek, Oskar},
+  journal={bioRxiv},
+  pages={053405},
+  year={2016},
+  publisher={Cold Spring Harbor Laboratory}
+}
+@article{fullmer2015pan,
+  title={The pan-genome as a shared genomic resource: mutual cheating, cooperation and the black queen hypothesis},
+  author={Fullmer, Matthew S and Soucy, Shannon Margaret and Gogarten, Johann Peter},
+  journal={Frontiers in microbiology},
+  volume={6},
+  pages={728},
+  year={2015},
+  publisher={Frontiers}
+}
